Full adding and deleting roads via ui,