@@ -3,6 +3,7 @@ package net.marvk.marpletraffic;
 import net.marvk.marpletraffic.graph.Graph;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 
@@ -11,9 +12,12 @@ public class Simulation {
 
     private final List<Agent> agents;
 
+    private final List<Agent> agentsUnmodifiable;
+
     public Simulation(final Graph graph, final ArrayList<Agent> agents) {
         this.graph = graph;
-        this.agents = List.copyOf(agents);
+        this.agents = new ArrayList<>(agents);
+        this.agentsUnmodifiable = Collections.unmodifiableList(this.agents);
     }
 
     public void step() {
@@ -26,6 +30,17 @@ public class Simulation {
     }
 
     public List<Agent> getAgents() {
-        return agents;
+        return agentsUnmodifiable;
+    }
+
+    public void spawnAgents() {
+        for (int i = 0; i < 40; i++) {
+            agents.add(new Agent(
+                    graph.getRandomLane(),
+                    0.3 + ThreadLocalRandom.current().nextDouble() * 2.2,
+                    agents,
+                    Integer.toHexString(ThreadLocalRandom.current().nextInt())
+            ));
+        }
     }
 }
